[gd_scene load_steps=15 format=2]

[ext_resource path="res://Graphics/Button.png" type="Texture" id=1]
[ext_resource path="res://Graphics/dionymph_logo.png" type="Texture" id=2]
[ext_resource path="res://Text/Arimo-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Graphics/ButtonHover.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Background.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=6]
[ext_resource path="res://Graphics/ITS.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=3]
size = 23
outline_size = 1
outline_color = Color( 0.788235, 0.517647, 0.396078, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 128, 32 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 128, 32 )

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform float amount: hint_range(0.0, 5.0);

void fragment() {
    COLOR.rgb = textureLod(SCREEN_TEXTURE, SCREEN_UV, amount).rgb;
}
"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/amount = 2.0

[sub_resource type="Animation" id=6]
resource_name = "MenuAnim"
tracks/0/type = "value"
tracks/0/path = NodePath("Title:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Title:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 103.856, -0.25, 0, 0.1, -12.7261, 90.46, -0.19185, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("ButtonNewG:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ButtonNewG:rect_position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 198.597, -0.25, 0, 0.1, -2.65843, 193.492, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.2, 0.6 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("ButtonCharger:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( -0.2, 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("ButtonCharger:rect_position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 296.224, -0.25, 0, 0.1, -2.09821, 292.022, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.3, 0.7 )
}
tracks/6/type = "value"
tracks/6/path = NodePath("ButtonPar:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( -0.1, 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Its:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Background:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001

[node name="Menu" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 680, 408 )
texture = ExtResource( 5 )
offset = Vector2( -296, -168 )

[node name="ButtonPar" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 572.762
margin_top = 415.178
margin_right = 735.762
margin_bottom = 459.178
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.12549, 0.0784314, 0, 1 )
custom_colors/font_color_hover = Color( 0.12549, 0.0784314, 0, 1 )
custom_colors/font_color_pressed = Color( 0.12549, 0.0784314, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
keep_pressed_outside = true
text = "Parametres"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonNewG" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 242.227
margin_top = 198.597
margin_right = 498.227
margin_bottom = 262.597
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.12549, 0.0784314, 0, 1 )
custom_colors/font_color_hover = Color( 0.12549, 0.0784314, 0, 1 )
custom_colors/font_color_pressed = Color( 0.12549, 0.0784314, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
keep_pressed_outside = true
text = "Nouvelle partie"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCharger" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 244.346
margin_top = 296.224
margin_right = 500.346
margin_bottom = 360.224
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.12549, 0.0784314, 0, 1 )
custom_colors/font_color_hover = Color( 0.12549, 0.0784314, 0, 1 )
custom_colors/font_color_pressed = Color( 0.12549, 0.0784314, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
keep_pressed_outside = true
text = "Charger"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 384, 103.856 )
scale = Vector2( 1.7, 1.7 )
texture = ExtResource( 2 )

[node name="Blur" type="CanvasLayer" parent="."]

[node name="Blur" type="ColorRect" parent="Blur"]
visible = false
material = SubResource( 5 )
margin_right = 768.0
margin_bottom = 480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panels" type="CanvasLayer" parent="."]
layer = 2

[node name="Its" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 43.7642, 37.6296 )
scale = Vector2( 0.0339294, 0.0339294 )
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/MenuAnim = SubResource( 6 )
anims/RESET = SubResource( 7 )

[connection signal="pressed" from="ButtonPar" to="." method="_on_ButtonPar_pressed"]
[connection signal="pressed" from="ButtonNewG" to="." method="_on_ButtonNewG_pressed"]
[connection signal="pressed" from="ButtonCharger" to="." method="_on_Button_pressed"]
